# tg-ws-proxy

./: .dockerignore  .gitignore  README.md  flake.nix  pyproject.toml  stress_test.py  windows.py
.github/workflows/: build.yml
docs/: CfProxy.md
proxy/: bridge.py  config.py  raw_websocket.py  tg_ws_proxy.py
